# megaWar

./: .gitignore  CMakeLists.txt  Card.cpp  Card.hpp  CardPile.cpp  CardPile.hpp  Deck.cpp  Deck.hpp  Game.cpp  Game.hpp  LostAndFound.cpp  LostAndFound.hpp  Makefile  MegaDeck.cpp  MegaDeck.hpp  Player.cpp  Player.hpp  WarPile.cpp  WarPile.hpp  main.cpp  readme.md
.github/workflows/: build.yml
